--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <BR>
           <INPUT TYPE="submit" value="Return Shoes">
           <INPUT TYPE="reset" value="Reset">
+            <BR>
+              <BR>
+          <section>
+            <li><a href="https://killerswitc.github.io/Ict-Creative-3/#">Go Back</a></li> 
+          </section>
+          
       </FORM>
       
     </BODY>  
